# webserver

./: CMakeLists.txt
classes/CgiHandler/: CgiHandler.cpp  CgiHandler.hpp  CgiPhp.cpp  CgiPhp.hpp  CgiTester.cpp  CgiTester.hpp
classes/ConnectionsHandler/: ConnectionsHandler.cpp  ConnectionsHandler.hpp
classes/RequestHandler/: PathComponents.cpp  PathComponents.hpp  RequestHandler.cpp  RequestHandler.hpp
classes/Response/: ErrorResponseFactory.cpp  ErrorResponseFactory.hpp  Response.hpp
classes/ServerCluster/: ServerCluster.cpp  ServerCluster.hpp
classes/ServerConsts/: ServerConsts.cpp  ServerConsts.hpp
classes/ServerSettings/: ListenerConfig.cpp  ListenerConfig.hpp  parsingConfigFile.cpp  parsingConfigFile.hpp
classes/Session/: Session.cpp  Session.hpp
classes/parseHeader/: Request.cpp  Request.hpp  utils.cpp  utils.hpp
config/: anatashi_serv.config  hrema_serv.config  sjolynn_serv.config
content_for_webServer/authorization_page/: authorization_page.html  authorization_page2.php  password.txt
content_for_webServer/check_delete/: check_delete.html
content_for_webServer/check_delete/files/: delete_me.h
content_for_webServer/error_pages/400_bad_request/: 400.html
content_for_webServer/error_pages/405_method_not_allowed/: 405.html
content_for_webServer/error_pages/500_internal_server_error/: 500.html
content_for_webServer/error_pages/501_not_implemented/: 501.html
content_for_webServer/error_pages/505_version_not_supported/: 505.html
content_for_webServer/home_page/: home_page.html  stylesheet.css
content_for_webServer/home_page/dir!/: 404.html  page.http  test.html
content_for_webServer/user_registration/: user_registration.cgi  user_registration.html
includes/: webServer.hpp
srcs/: main.cpp
utils/: _ft_isdigit.cpp  _ft_itoa.cpp  _ft_size_tInStr.cpp  _ft_strdup.cpp  _ft_strjoin.cpp  put_log.cpp  to_string.cpp  utils.hpp  writeFileToBuffer.cpp
(+1 files in other folders)
